@@ -108,6 +108,10 @@ _______________
   (Tim McGilchrist, review by Miod Vallat, Gabriel Scherer and
    KC Sivaramakrishnan)
 
+- #13139: Simplify CAMLalign to always use C23/C++11 alignas or C11
+  _Alignas.
+  (Antonin Décimo, review by Miod Vallat and Xavier Leroy)
+
 ### Code generation and optimizations:
 
 - #13014: Enable compile-time option -function-sections on all previously
